# kickstarter-analytics

./: .gitignore  PROGRESS.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
components/: metric_card.py  pipeline_diagram.py  sql_cell.py
data/: setup.py
db/: connection.py  executor.py  queries.py
styles/: custom.css  theme.py
tabs/: tab1_context.py  tab2_collection_prep.py  tab3_analysis.py  tab4_synthesis.py  tab5_executive.py
visualizations/: campaign_duration.py  category_performance.py  geographic.py  histogram_goals.py  pledge_per_backer.py  scatter_goal_pledged.py
