[project]
name = "kickstarter-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.0.0",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
